crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT $$'\\\\as' ab\\c ab\\\\c AB\\\\\\c ab\\\\\\\\c$$::tsvector;"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..53
    TypeCast@7..53
      AConst@7..43
        Sconst@7..43 "$$'\\\\as' ab\\c ab\\\\c A ..."
      Typecast@43..45 "::"
      TypeName@45..53
        Ident@45..53 "tsvector"
  Ascii59@53..54 ";"

