crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@120.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsvector('simple', '1 2 1 2 3 4') @@ '1 <-> 2 <-> 3' AS \"true\";"
---
SelectStmt@0..73
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..72
    AExpr@7..62
      FuncCall@7..42
        Ident@7..18 "to_tsvector"
        Ascii40@18..19 "("
        AConst@19..27
          Sconst@19..27 "'simple'"
        Ascii44@27..28 ","
        Whitespace@28..29 " "
        AConst@29..42
          Sconst@29..42 "'1 2 1 2 3 4'"
      Ascii41@42..43 ")"
      Whitespace@43..44 " "
      Op@44..46 "@@"
      Whitespace@46..47 " "
      AConst@47..62
        Sconst@47..62 "'1 <-> 2 <-> 3'"
    Whitespace@62..63 " "
    As@63..65 "AS"
    Whitespace@65..66 " "
    Ident@66..72 "\"true\""
  Ascii59@72..73 ";"

