crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@124.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('simple', 'q y') @@ 'q <-> (x | y <-> z)' AS \"false\";"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    AExpr@7..60
      FuncCall@7..34
        Ident@7..18 "to_tsvector"
        Ascii40@18..19 "("
        AConst@19..27
          Sconst@19..27 "'simple'"
        Ascii44@27..28 ","
        Whitespace@28..29 " "
        AConst@29..34
          Sconst@29..34 "'q y'"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "@@"
      Whitespace@38..39 " "
      AConst@39..60
        Sconst@39..60 "'q <-> (x | y <-> z)'"
    Whitespace@60..61 " "
    As@61..63 "AS"
    Whitespace@63..64 " "
    Ident@64..71 "\"false\""
  Ascii59@71..72 ";"

