crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT tsvectorin(tsvectorout($$'\\\\as' ab\\c ab\\\\c AB\\\\\\c ab\\\\\\\\c$$::tsvector));"
---
SelectStmt@0..79
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..76
    FuncCall@7..76
      Ident@7..17 "tsvectorin"
      Ascii40@17..18 "("
      FuncCall@18..76
        Ident@18..29 "tsvectorout"
        Ascii40@29..30 "("
        TypeCast@30..76
          AConst@30..66
            Sconst@30..66 "$$'\\\\as' ab\\c ab\\\\c A ..."
          Typecast@66..68 "::"
          TypeName@68..76
            Ident@68..76 "tsvector"
  Ascii41@76..77 ")"
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

